--- a/index.html
+++ b/index.html
@@ -2013,7 +2013,7 @@ bookmarks.map(function(bookmark) {
     </script>
 
     <footer style="text-align: center; padding: 20px; color: var(--text-muted); font-size: 12px; margin-top: 40px;">
-        <div>GitHub: <a href="https://github.com/OstryKot/KeepLink" style="color: var(--accent);" target="_blank">github.com/OstryKot/bookmarks</a></div>
+        <div>GitHub: <a href="https://github.com/OstryKot/KeepLink" style="color: var(--accent);" target="_blank">github.com/OstryKot/KeepLink</a></div>
         <div>Interface version: 1.0.0</div>
     </footer>
 </body>
